--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
   <div id="table-container" class="table-container"></div>
 
   <script>
-    // تهيئة Supabase
-    const supabaseUrl = 'https://uemmbigftrrsejzucgxo.supabase.co'; // ضع رابط مشروعك هنا
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlbW1iaWdmdHJyc2VqenVjZ3hvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg3OTE5NTksImV4cCI6MjA3NDM2Nzk1OX0.ku6ibVn84Pw1a-_2sWTRia3fynuxE7Axi3qXip6oI8k'; // ضع المفتاح العام هنا
+    // بيانات Supabase
+    const supabaseUrl = 'https://uemmbigftrrsejzucgxo.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlbW1iaWdmdHJyc2VqenVjZ3hvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg3OTE5NTksImV4cCI6MjA3NDM2Nzk1OX0.ku6ibVn84Pw1a-_2sWTRia3fynuxE7Axi3qXip6oI8k';
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     function showTable(type) {
@@ -152,9 +152,8 @@
       for (let i = 0; i < 8; i++) {
         const row = document.createElement('tr');
 
-        headers.forEach((header, colIndex) => {
+        headers.forEach((header) => {
           const cell = document.createElement('td');
-
           let input;
 
           if (header === 'اليوم' || header === 'عنوان المقطع') {
@@ -178,7 +177,7 @@
       table.appendChild(tbody);
       tableContainer.appendChild(table);
 
-      // أزرار الحفظ والحذف
+      // أزرار حفظ وحذف
       const actionDiv = document.createElement('div');
       actionDiv.className = 'action-buttons';
 
@@ -196,7 +195,7 @@
 
       tableContainer.appendChild(actionDiv);
 
-      // تحميل البيانات من Supabase
+      // تحميل البيانات المحفوظة
       loadSavedData(type, table);
     }
 
@@ -206,19 +205,17 @@
         return Array.from(row.cells).map(cell => {
           const input = cell.querySelector('input');
           if (!input) return '';
-          if (input.type === 'checkbox') {
-            return input.checked;
-          }
-          return input.value;
+          return input.type === 'checkbox' ? input.checked : input.value;
         });
       });
 
-      // حذف البيانات القديمة أولاً (اختياري حسب الحاجة)
+      // حذف البيانات القديمة لهذا النوع
       await supabase
         .from('schedules')
         .delete()
         .eq('type', type);
 
+      // إدخال البيانات الجديدة
       const { error } = await supabase
         .from('schedules')
         .insert([{ type, data }]);
@@ -227,7 +224,7 @@
         alert('❌ فشل في حفظ البيانات.');
         console.error(error);
       } else {
-        alert('✅ تم حفظ الجدول في Supabase!');
+        alert('✅ تم حفظ الجدول بنجاح!');
       }
     }
 
@@ -263,23 +260,4 @@
     }
 
     async function deleteTableData(type) {
-      const confirmed = confirm('هل أنت متأكد أنك تريد حذف بيانات هذا الجدول؟');
-      if (!confirmed) return;
-
-      const { error } = await supabase
-        .from('schedules')
-        .delete()
-        .eq('type', type);
-
-      if (error) {
-        alert('❌ حدث خطأ أثناء حذف البيانات.');
-        console.error(error);
-      } else {
-        alert('🗑️ تم حذف بيانات الجدول.');
-        location.reload();
-      }
-    }
-  </script>
-
-</body>
-</html>
+      const confirmed
