--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <script>
 
-    const supabase = supabase.createClient('https://YOUR-PROJECT-ID.supabase.co', 'YOUR-ANON-KEY');
+    const supabase = supabase.createClient('https://uemmbigftrrsejzucgxo.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlbW1iaWdmdHJyc2VqenVjZ3hvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg3OTE5NTksImV4cCI6MjA3NDM2Nzk1OX0.ku6ibVn84Pw1a-_2sWTRia3fynuxE7Axi3qXip6oI8k');
 
 
     function showTable(type) {
