--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
   <h1>اختر الجدول الذي تريده</h1>
 
-  <div class="button-container">
-    <button onclick="showTable('mrb')">مربع</button>
-    <button onclick="showTable('reels')">ريلز</button>
-  </div>
+<div class="button-container">
+  <button class="blue-btn" onclick="showTable('mrb')">مربع</button>
+  <button class="green-btn" onclick="showTable('reels')">ريلز</button>
+</div>
 
   <div id="table-container" class="table-container"></div>
 
