--- a/index.html
+++ b/index.html
@@ -18,25 +18,33 @@
       color: #333;
     }
 
-    .button-container {
-      margin-bottom: 30px;
-    }
+      .blue-btn {
+    background-color: #007BFF; /* لون أزرق */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
 
-    button {
-      padding: 15px 25px;
-      font-size: 16px;
-      margin: 10px;
-      cursor: pointer;
-      border: none;
-      border-radius: 5px;
-      background-color: #4CAF50;
-      color: white;
-      transition: background-color 0.3s;
-    }
+  .green-btn {
+    background-color: #28a745; /* لون أخضر */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
 
-    button:hover {
-      background-color: #388e3c;
-    }
+  .blue-btn:hover {
+    background-color: #0056b3;
+  }
+
+  .green-btn:hover {
+    background-color: #1e7e34;
+  }
 
     .table-container {
       display: none;
