--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
       color: #333;
     }
 
-  .blue-btn {
-    background-color: #007BFF; /* لون أزرق */
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    margin: 5px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
+.blue-btn {
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  padding: 16px 32px; /* زيادة الحجم */
+  margin: 8px;
+  cursor: pointer;
+  border-radius: 6px;
+  font-size: 20px; /* زيادة حجم الخط */
+}
+
 
   .green-btn {
     background-color: #28a745; /* لون أخضر */
