--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     background-color: #28a745; /* لون أخضر */
     color: white;
     border: none;
-    padding: 10px 20px;
-    margin: 5px;
+    padding: 16px 32px;
+    margin: 8px;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 6px;
+    font-size: 20px;
   }
 
   .blue-btn:hover {
