--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
     background-color: #1e7e34;
   }
 
+    .button-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.button-container button {
+  width: 150px; /* توحيد العرض */
+  font-size: 16px;
+}
+
     .table-container {
       display: none;
       margin-top: 30px;
