--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       width: 100%;
       max-width: 1200px;
       margin: 0 auto;
-      background-color: green;
+      background-color: #f275;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
 
