--- a/index.html
+++ b/index.html
@@ -373,6 +373,47 @@ async function testSupabase() {
 // شغّل الاختبار عند تحميل الصفحة
 document.addEventListener('DOMContentLoaded', testSupabase);
 
+  // اختبار الاتصال (أضفه مؤقتًا فقط)
+async function testSupabaseConnection() {
+  console.log('🔍 بدء اختبار الاتصال بـ Supabase...');
+  try {
+    // اختبار 1: هل الجدول موجود؟
+    const { data: countData, error: countError } = await supabase
+      .from('publishing_schedule')
+      .select('count', { count: 'exact', head: true });
+
+    if (countError) {
+      console.error('❌ خطأ في الوصول إلى الجدول:', countError.message);
+      alert('❌ مشكلة في الجدول: ' + countError.message + '\n\nأنشئ الجدول في Supabase أولاً (الخطوة 2).');
+      return;
+    }
+
+    console.log('✅ الجدول موجود! عدد السجلات:', countData?.count || 0);
+
+    // اختبار 2: محاولة إدراج بيانات تجريبية بسيطة
+    const { error: insertTestError } = await supabase
+      .from('publishing_schedule')
+      .insert([{ type: 'test', row_index: 0, column_index: 0, value: 'test' }]);
+
+    if (insertTestError) {
+      console.error('❌ خطأ في الإدراج التجريبي:', insertTestError.message);
+      alert('❌ مشكلة في الحفظ: ' + insertTestError.message + '\n\nتحقق من الصلاحيات (الخطوة 3).');
+    } else {
+      console.log('✅ الإدراج يعمل! (تم إضافة سجل تجريبي)');
+      alert('✅ الاتصال والحفظ يعملان! عدد السجلات الآن: ' + (countData?.count + 1 || 1) + '\n\nاحذف السجل التجريبي من Supabase إذا أردت.');
+      
+      // حذف السجل التجريبي تلقائيًا
+      await supabase.from('publishing_schedule').delete().eq('type', 'test');
+    }
+  } catch (err) {
+    console.error('❌ خطأ عام في الاختبار:', err);
+    alert('❌ خطأ غير متوقع في الاختبار: ' + err.message + '\n\nتحقق من Console للتفاصيل.');
+  }
+}
+
+// شغّل الاختبار عند تحميل الصفحة
+document.addEventListener('DOMContentLoaded', testSupabaseConnection);
+
 </script>
 </body>
 </html>
